samples/_failures_safe/1761356816_f431a6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_186be62a.c: In function ‘pointcloud_init’:
./samples/SAFE/__tmp_186be62a.c:120:13: error: expected ‘;’ at end of input
  120 |     return 1
      |             ^
      |             ;
./samples/SAFE/__tmp_186be62a.c:120:5: error: expected declaration or statement at end of input
  120 |     return 1
      |     ^~~~~~
